# wort

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.worker  LICENSE  Pipfile  README.md  default.nix  docker-compose.yml  env.production.example  flake.nix  pixi.toml  pyproject.toml  requirements.txt  shell.nix  tox.ini  wortapp.py
.github/workflows/: check.yaml  codeql-analysis.yml  docker-images.yml
config/: settings.py
crates/api/: Cargo.toml
crates/frontend/: Cargo.toml  Makefile
crates/frontend/src/: lib.rs  native_worker.rs
crates/frontend/static/: app.css  app.js  index.html  worker.js
crates/local/: Cargo.toml
crates/local/src/: main.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: arch.md
frontend/: package.json
frontend/src/: server.js
frontend/src/components/: FileUpload.svelte  Nav.svelte
frontend/src/routes/: compute.svelte  index.svelte
frontend/src/routes/view/: index.svelte
frontend/src/routes/view/img/: [dataset_id].json.js  [dataset_id].svelte  _datasets.js
frontend/src/routes/view/sra/: [dataset_id].svelte  _datasets.js
machine/archive/: README.md  s3_sync.sh
machine/archive/scripts/: augment_csv.py  bucket_diff.py  genomes.sbatch  img.sbatch  parse_update_logs.py  s3_metadata.sh  sha256.sbatch  sra.sbatch
machine/mirror/: wort-mirror.py
machine/wort-web/: README.md  add_dataset_info.py  add_dataset_info_genomes.py  add_ipfs_mapping_db.py  crontab  daily-sra-biopython.py  download_daily_sra.sh  submit.py  submit_genomes.py
machine/wort-web/outputs/: demo.csv
migrations/: env.py
migrations/versions/: 2dc46d52a3a3_more_dataset_info.py  350a33097a70_tasks.py  8f8cfb1c44ac_user_model.py  93ff4335d83d_longer_name_and_url_for_datasets.py  96052cfeea9b_datasets.py  b0738f3203a8_user_tokens.py  d4c3f1867727_add_computed_date.py
nginx/: Dockerfile  nginx.conf  wort.conf
nix/: overlay.nix  rust.nix  sources.json
nix/pkgs/: wort.nix
scripts/: setup_iam.sh
src/: main.rs  wort.yml
wort/: __init__.py  api.py  api.yaml  app.py  ext.py  models.py  tasks.py
wort/blueprints/api/: __init__.py  auth.py  tokens.py
wort/blueprints/auth/: __init__.py  auth.py
wort/blueprints/compute/: __init__.py  tasks.py  views.py
wort/blueprints/errors/: __init__.py  handlers.py
wort/blueprints/search/: __init__.py  tasks.py  views.py
wort/blueprints/submit/: __init__.py  views.py
wort/blueprints/viewer/: __init__.py  views.py
wort/static/css/: main.css
wort/templates/: base.html  index.html  view.html  view_base.html
