[package]
name = "wort"
version = "0.1.1"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "Command line client for the wort API"
repository = "https://github.com/dib-lab/wort"
keywords = ["minhash", "bioinformatics"]
categories = ["science"]
license = "BSD-3-Clause"
edition = "2018"

[dependencies]
clap = { version = "~2.32", features = ["yaml"] }
dialoguer = "0.2.0"
keyring = "0.7.1"
reqwest = "^0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.2"
