[workspace]
members = ["crates/local", "crates/server", "crates/frontend", "crates/p2p", "crates/api"]

default-members = ["crates/api"]

[profile.release]
debug = true
# less code to include into binary
#panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
#codegen-units = 1
# optimization for size ( more aggressive )
#opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
#lto = true
