[workspace]
members = ["crates/local", "crates/server", "crates/frontend", "crates/api"]

default-members = ["crates/local", "crates/server", "crates/api"]

[profile.release]
#debug = true
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[workspace.dependencies]
anyhow = "1.0.34"
async-std = { version = "1.10.0", features = ["attributes"] }
camino = "1.1.6"
clap = { version = "2.33.1", features = ["yaml"] }
dialoguer = "0.6.2"
env_logger = "0.8.1"
eyre = "0.4.3"
futures = "0.3.1"
getrandom = { version = "0.2.3", features = ["js"] }
js-sys = "0.3"
keyring = "0.10.1"
libp2p = "0.29.1"
log = "0.4.8"
needletail = { version = "0.4.0", default-features = false }
niffler = { version = "2.3.2", default-features = false, features = ["gz"] }
rayon = "1.0"
reqwest = { version = "0.10.6", features = ["blocking", "gzip", "json"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
sourmash = { path = "../sm_worktrees/mastiff/src/core", features = ["branchwater"]}
structopt = "0.3.0"
thiserror = "1.0"
tide = "0.16.0"
wasm-logger = "0.2"
web-sys = "0.3.45"
wee_alloc = "0.4.5"
yew = "0.18"
