[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
name = "wort"
description = "A database for signatures of public genomic sources"
authors = [ { name = "Luiz Irber", email = "luiz@sourmash.bio" }]
#home-page = "https://wort.sourmash.bio"
classifiers = ["License :: OSI Approved :: GNU Affero General Public License v3"]
version = "0.0.2"
requires-python = ">=3.10"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.feature.web.dependencies]
curl = ">=8.5.0,<8.6"
pycurl = ">=7.45.1,<7.46"
cachelib = ">=0.10.2,<0.11"
psycopg2-binary = ">=2.9.9,<2.10"
pip = "*"

[tool.pixi.feature.web.pypi-dependencies]
gunicorn = ">=20.1.0,<20.2"
greenlet = "~=3.2.4"  # last version with glibc 2.17, needed for OPC instance
flask = "<2.3.0"
redis = ">=4.5.5,<4.6"
flask-wtf = ">=1.1.1,<1.2"
flask-migrate = ">=4.0.4,<4.1"
flask-login = ">=0.6.2,<0.7"
flask-shell-ipython = ">=0.5.3,<0.6"
jsonschema = ">=4.17.3,<4.18"
openapi-spec-validator = ">=0.5.7,<0.6"
sentry-sdk = { version = ">=2.10.0,<2.11.0", extras = ["flask", "celery", "sqlalchemy"] }
connexion = { version = ">=2.14.2,<3", extras = ["swagger-ui"] }
werkzeug = ">=1.0,<2.3"
celery = { version = ">=5.3.1,<5.4", extras = ["sqs", "s3"] }

[tool.pixi.feature.worker.dependencies]
sourmash-minimal = ">=4.8.5,<4.9"
sra-tools = "~=3.2.0"
pip = "*"

# Used for installing into worker, as a post-process step
[tool.pixi.feature.dev.pypi-dependencies]
biopython = ">=1.81,<2"
pandas = "~=2.2.0"
wort = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
awscli = ">=2.15.8,<2.16"
s3fs = ">=2025.12.0,<2026"
sourmash = ">=4.8.14,<5"

[tool.pixi.feature.archive.dependencies]
s5cmd = ">=2.2.2,<3"
polars = ">=1.33.0,<2"

[tool.pixi.feature.archive.tasks.s3_sync]
args = [ "date" ]
cmd = "./s3_sync.sh {{ date }}"
cwd = "machine/archive"

[tool.pixi.feature.archive.tasks.download_s3_metadata]
args = [ "update_logs", "s5cmd_commands" ]
cmd = "python scripts/parse_update_logs.py {{ update_logs }} {{ s5cmd_commands }}"
cwd = "machine/archive"

[tool.pixi.feature.archive.tasks.augment_manifest]
args = [ "format", "basedir", "manifest", "sha256", "s3_metadata", "output" ]
cwd = "machine/archive"
cmd = "python scripts/augment_csv.py -F {{ format }} -b {{ basedir }} {{ manifest }} {{ sha256 }} {{ s3_metadata }} {{ output }}"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"

# Used for installing into web, as a post-process step
[tool.pixi.feature.build.dependencies]
flit-core = ">=3.2,<4"

[tool.pixi.feature.build.pypi-dependencies]
build = "*"

[tool.pixi.feature.build.tasks]
# Create a wheel for installation
build-wheel = "python -m build --no-isolation --wheel ."

[tool.pixi.tasks]
submit = "python machine/wort-web/submit.py"
dev = "flask --app wort.app:create_app --bind :8000"
start = "gunicorn -b 0.0.0.0:5000 --access-logfile - --reload 'wort.app:create_app()'"
# Install into the prod environments
postinstall-prod = "python -m pip install --no-deps --disable-pip-version-check dist/wort-*.whl"

[tool.pixi.environments]
# Default environment, has features for running in development, testing, and building
default = { features = ["test", "dev", "build", "web", "worker", "archive"], solve-group = "default" }
# Leaner environment for use in production
web = { features = ["web"], solve-group = "default" }
worker = { features = ["worker", "web"], solve-group = "default" }
# Used in the main archive machine
archive = { features = ["archive"], solve-group = "default" }

[tool.pixi.system-requirements]
linux = "3.10"
libc = "2.17"
