[package]
name = "wort"
version = "0.1.1"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "Command line client for the wort API"
repository = "https://github.com/dib-lab/wort"
keywords = ["minhash", "bioinformatics"]
categories = ["science"]
license = "AGPL-3.0-only"
edition = "2018"

[dependencies]
clap = { version = "2.33.1", features = ["yaml"] }
dialoguer = "0.6.2"
keyring = "0.10.1"
reqwest = { version = "0.10.6", features = ["blocking", "gzip", "json"] }
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
eyre = "0.4.3"
