[package]
name = "wort"
version = "0.1.1"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "Command line client for the wort API"
repository = "https://github.com/dib-lab/wort"
keywords = ["minhash", "bioinformatics"]
categories = ["science"]
license = "AGPL-3.0-only"
edition = "2018"

[dependencies]
clap.workspace = true
dialoguer.workspace = true
eyre.workspace = true
keyring.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
