[package]
name = "greyhound-frontend"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
license = "AGPL-3.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "greyhound_frontend"
path = "src/bin/app.rs"

[[bin]]
name = "greyhound_worker"
path = "src/bin/worker.rs"

[dependencies]
anyhow.workspace = true
getrandom.workspace = true
js-sys.workspace = true
log.workspace = true
needletail.workspace = true
niffler.workspace = true
serde.workspace = true
serde_json.workspace = true
sourmash.workspace = true
wasm-logger.workspace = true
web-sys.workspace = true
wee_alloc.workspace = true
yew.workspace = true
