[package]
name = "greyhound-cli"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
license = "AGPL-3.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino.workspace = true
env_logger.workspace = true
log.workspace = true
niffler.workspace = true
rayon.workspace = true
serde_json.workspace = true
sourmash.workspace = true
structopt.workspace = true
