[package]
name = "greyhound-p2p"
version = "0.1.0"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
license = "AGPL-3.0-only"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std.workspace = true
env_logger.workspace = true
futures.workspace = true
libp2p.workspace = true
log.workspace = true
serde.workspace = true
sourmash.workspace = true
thiserror.workspace = true
